# Spire

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  RAEDME.md  README.md  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: app.rs  lib.rs
src/components/: mod.rs
tests/: megalodon.rs
