[workspace]
resolver = "2"
members = [
    "packages/ebou",
    "packages/hackernews"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dioxus = { version = "0.5.6" }
chrono = { version = "0.4.38" }
async-recursion = "1.1.1"
futures = "0.3.31"
reqwest = { version = "0.12.9"}
serde = { version = "1.0.215"}
serde_json = "1.0.133"
