[workspace]
resolver = "2"
members = [
    "packages/hackernews",
    "packages/nest",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
dioxus = { version = "0.5.6" }
chrono = { version = "0.4.38" }
async-recursion = "1.1.1"
futures = "0.3.31"
reqwest = { version = "0.12.9"}
serde = { version = "1.0.215"}
serde_json = "1.0.133"
dioxus-logger = "0.5.1"
cfg-if = "1.0.0"

[package]
name = "spire"
version = { workspace = true }
authors = ["sicheng1806 <sicheng1806@outlook.com>"]
edition = "2021"
description = "Experimental Mastodon Client"

[dependencies]
dioxus = { workspace=true, features = ["web","router"] }
megalodon = "0.14.1"
tokio = { version = "1.41.1", features = ["full"] }
